--- a/configs/samples/hep.conf.sample
+++ b/configs/samples/hep.conf.sample
@@ -15,6 +15,6 @@ capture_id = 1234                  ; A unique integer identifier for this
                                    ; with each packet from this server.
 uuid_type = call-id                ; Specify the preferred source for the Homer
                                    ; correlation UUID. Valid options are:
-                                   ; - 'call-id' for the PJSIP SIP Call-ID
+                                   ; - 'call-id' for the SIP Call-ID
                                    ; - 'channel' for the Asterisk channel name
 
